src/objects/Part_FIFO_Bucket_Activity_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>AccountingId__c</fullName>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <label>AccountingResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Cost_When_Created__c</fullName>
        <label>Average Cost When Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipName>Part_FIFO_Bucket_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_Session_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Count Session Line Item</label>
        <referenceTo>Count_Session_Line_Item__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Adjustment</label>
        <referenceTo>Part_FIFO_Bucket__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items (Part Adjustment)</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_FIFO_Bucket__c</fullName>
        <label>Part FIFO Bucket</label>
        <referenceTo>Part_FIFO_Bucket__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_In_Stock_When_Created__c</fullName>
        <label>Qty In Stock When Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Out__c</fullName>
        <label>Qty Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_VO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return VO Header</label>
        <referenceTo>Return_VO_Header__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_VO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return VO Line Item</label>
        <referenceTo>Return_VO_Line_Item__c</referenceTo>
        <relationshipLabel>Part FIFO Bucket Activity Line Items</relationshipLabel>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Reference__c</fullName>
        <description>Populated from BP APIs. Ex - MESH</description>
        <inlineHelpText>Populated from BP APIs. Ex - MESH</inlineHelpText>
        <label>Secondary Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Part_FIFO_Bucket_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Part FIFO Bucket Activity Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part_Adjustment__c</columns>
        <columns>Part_FIFO_Bucket__c</columns>
        <columns>Reference__c</columns>
        <columns>Type__c</columns>
        <columns>Cost__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Part_FIFO_Bucket_Line_Item</fullName>
        <columns>NAME</columns>
        <columns>CO_Invoice_Header__c</columns>
        <columns>Part_FIFO_Bucket__c</columns>
        <columns>Part_Adjustment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Part FIFO Bucket Line Item</label>
    </listViews>
    <listViews>
        <fullName>Async_Xero_Part_Adjustment</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero Part Adjustment</label>
    </listViews>
    <nameField>
        <displayFormat>PBNLI-{00000000}</displayFormat>
        <label>Part FIFO Bucket Activity Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part FIFO Bucket Activity Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>